1.0.0-SNAPSHOT 9 Gui manager